2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/replaced-viewed.sh: Use rm -f instead of rm.

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (forget_info_file): Function replaced.  Don't 
	free the file buffer because it could still be referenced in a 
	displayed node.
	* info/Makefile.am (XFAIL_TESTS): Remove replace-viewed.sh.
	* info/nodes.h (N_Gone): New symbol.

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/replaced-viewed.sh: New test.  (Bug reported by Benno 
	Schulenberg).
	* info/Makefile.am (TESTS, XFAIL_TESTS): Add it.

2015-06-07  Karl Berry  <karl@freefriends.org>

	* Pretest 5.9.93.

2015-06-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Timeout-test.inc: Check for "read -t" slightly 
	differently.

2015-06-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc,
	* info/t/Init-inter.inc: Check if running the test turned off 
	terminal echoing, and only run "stty sane" if that is the case.
	* info/t/Timeout-test.inc: Default exit status of test to 
	success.

2015-06-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/index-apropos.sh: Wait for 'index-apropos' command to 
	finish before we sent more key strokes.

2015-06-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc (cleanup): Run "stty sane" (interactive 
	tests only).
	* info/t/Init-inter.inc: Check for stty program.

2015-06-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/adjust-anchors.sh: Add comment about name of character 
	encoding.  Export LC_ALL instead of LANG.

2015-06-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Check for failure from "write" call.  Don't 
	exit for an error communicating with controlled process; do exit 
	for error on control channel.
	* info/t/Init-inter.inc: Open FIFO for commmunicating that ginfo 
	has finished on both ends, to allow timeout to work.  Start 
	pseudotty with "exec" in case there is an intermediate shell, to 